combo, snacks, drinks, deserts

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                     <ul>
                         <li><a href="#pizza">Пицца</a></li>
                         <li><a href="#combo">Комбо</a></li>
-                        <li><a href="#snacks" class="active">Закуски</a></li>
+                        <li><a href="#snacks">Закуски</a></li>
                         <li><a href="#deserts">Десерты</a></li>
                         <li><a href="#drinks">Напити</a></li>
                         <li><a href="#other">Другие товары</a></li>
@@ -77,7 +77,7 @@
             </div>
         </div>
     </section>
-    <section class="product">
+    <section class="product" id="pizza">
         <div class="container">
             <h2>Пицца</h2>
             <div class="content">
@@ -151,6 +151,214 @@
                     <div class="card__bottom">
                         <p class="card__price">от 245 ₽</p>
                         <button class="button">Выбрать</button>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <section class="product" id="combo">
+        <div class="container">
+            <h2>Комбо</h2>
+            <div class="content">
+                <div class="card">
+                    <img src="./img/combo/combo.jpg" alt="Комбо за 599 ₽">
+                    <p class="card__name">Комбо за 599 ₽</p>
+                    <p class="card__descr">Наш хит «Аррива!» или другая пицца 25 см, Додстер, напиток и соус.</p>
+                    <div class="card__bottom">
+                        <p class="card__price">599 ₽</p>
+                        <button class="button button--orange">Собрать</button>
+                    </div>
+                </div>
+                <div class="card">
+                    <img src="./img/combo/combo.jpg" alt="2 пиццы">
+                    <p class="card__name">2 пиццы</p>
+                    <p class="card__descr">Самое популярное комбо из 2 пицц 30 см. Большой выбор</p>
+                    <div class="card__bottom">
+                        <p class="card__price">899 ₽</p>
+                        <button class="button button--orange">Собрать</button>
+                    </div>
+                </div>
+                <div class="card">
+                    <img src="./img/combo/combo.jpg" alt="2 пиццы и закуска">
+                    <p class="card__name">2 пиццы и закуска</p>
+                    <p class="card__descr">2 пиццы 25 см и закуска на выбор. Для компании из 2–4 человек</p>
+                    <div class="card__bottom">
+                        <p class="card__price">799 ₽</p>
+                        <button class="button button--orange">Собрать</button>
+                    </div>
+                </div>
+                <div class="card">
+                    <img src="./img/combo/combo.jpg" alt="Пицца и 2 закуски">
+                    <p class="card__name">Пицца и 2 закуски</p>
+                    <p class="card__descr">Пицца 30 см и 2 закуски на выбор. Для компании из 2–4 человек</p>
+                    <div class="card__bottom">
+                        <p class="card__price">599 ₽</p>
+                        <button class="button button--orange">Собрать</button>
+                    </div>
+                </div>
+                <div class="card">
+                    <img src="./img/combo/combo_3.jpg" alt="Комбо за 999 ₽">
+                    <p class="card__name">Комбо за 999 ₽</p>
+                    <p class="card__descr">3 пиццы 30 см на тонком тесте по суперцене. Выбор пицц ограничен</p>
+                    <div class="card__bottom">
+                        <p class="card__price">999 ₽</p>
+                        <button class="button button--orange">Собрать</button>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <section class="product" id="snacks">
+        <div class="container">
+            <h2>Закуски</h2>
+            <div class="content">
+                <div class="card">
+                    <img src="./img/snack/soup_tomato.jpg" alt="Томатный суп с гренками">
+                    <p class="card__name">Томатный суп с гренками</p>
+                    <p class="card__descr">Горячий суп с пшеничными гренками на основе фирменного соуса из итальянских томатов</p>
+                    <div class="card__bottom">
+                        <p class="card__price">99 ₽</p>
+                        <button class="button">В корзину</button>
+                    </div>
+                </div>
+                <div class="card">
+                    <img src="./img/snack/soup_tomato.jpg" alt="Томатный суп с митболами">
+                    <p class="card__name">Томатный суп с митболами</p>
+                    <p class="card__descr">Горячий суп c митболами из говядины и маслинами на основе фирменного соуса из итальянских томатов</p>
+                    <div class="card__bottom">
+                        <p class="card__price">149 ₽</p>
+                        <button class="button">В корзину</button>
+                    </div>
+                </div>
+                <div class="card">
+                    <img src="./img/snack/dodster.jpg" alt="Додстер">
+                    <p class="card__name">Додстер</p>
+                    <p class="card__descr">Легендарная горячая закуска с цыпленком, томатами, моцареллой, соусом ранч в тонкой пшеничной лепешке</p>
+                    <div class="card__bottom">
+                        <p class="card__price">159 ₽</p>
+                        <button class="button">В корзину</button>
+                    </div>
+                </div>
+                <div class="card">
+                    <img src="./img/snack/dodster_hot.jpg" alt="Острый Додстер">
+                    <p class="card__name">Острый Додстер</p>
+                    <p class="card__descr">Горячая закуска с острым цыпленком, перцем халапеньо, солеными огурчиками, томатами, моцареллой и соусом барбекю в тонкой пшеничной лепешке</p>
+                    <div class="card__bottom">
+                        <p class="card__price">159 ₽</p>
+                        <button class="button">В корзину</button>
+                    </div>
+                </div>
+                <div class="card">
+                    <img src="./img/snack/dodster_cheepotle.jpg" alt="Додстер Чипотле">
+                    <p class="card__name">Додстер Чипотле</p>
+                    <p class="card__descr">Горячая закуска с пикантным соусом чипотле из копченых перчиков, цыпленком, томатами, моцареллой в тонкой пшеничной лепешке</p>
+                    <div class="card__bottom">
+                        <p class="card__price">159 ₽</p>
+                        <button class="button">В корзину</button>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <section class="product" id="deserts">
+        <div class="container">
+            <h2>Десерты</h2>
+            <div class="content">
+                <div class="card">
+                    <img src="./img/deserts/pie_apple.jpg" alt="Яблочный пирог">
+                    <p class="card__name">Яблочный пирог</p>
+                    <p class="card__descr">Десерт из песочного теста с яблочной начинкой. Может содержать изюм</p>
+                    <div class="card__bottom">
+                        <p class="card__price">99 ₽</p>
+                        <button class="button">В корзину</button>
+                    </div>
+                </div>
+                <div class="card">
+                    <img src="./img/deserts/cheesecake.jpg" alt="Чизкейк Нью-Йорк">
+                    <p class="card__name">Чизкейк Нью-Йорк</p>
+                    <p class="card__descr">Классический американский творожный десерт</p>
+                    <div class="card__bottom">
+                        <p class="card__price">149 ₽</p>
+                        <button class="button">В корзину</button>
+                    </div>
+                </div>
+                <div class="card">
+                    <img src="./img/deserts/fondant.jpg" alt="Фонданы, 2 шт">
+                    <p class="card__name">Фонданы, 2 шт</p>
+                    <p class="card__descr">Два десерта с хрустящей корочкой и топлёной шоколадной начинкой</p>
+                    <div class="card__bottom">
+                        <p class="card__price">159 ₽</p>
+                        <button class="button">В корзину</button>
+                    </div>
+                </div>
+                <div class="card">
+                    <img src="./img/deserts/cocktail_milk.jpg" alt="Молочный коктейль с печеньем Орео">
+                    <p class="card__name">Молочный коктейль с печеньем Орео</p>
+                    <p class="card__descr">Напиток из молока и мороженого с добавлением дробленого печенья «Орео»</p>
+                    <div class="card__bottom">
+                        <p class="card__price">159 ₽</p>
+                        <button class="button">В корзину</button>
+                    </div>
+                </div>
+                <div class="card">
+                    <img src="./img/deserts/cocktail_milk.jpg" alt="Классический молочный коктейль">
+                    <p class="card__name">Классический молочный коктейль</p>
+                    <p class="card__descr">Напиток из молока и мороженого</p>
+                    <div class="card__bottom">
+                        <p class="card__price">159 ₽</p>
+                        <button class="button">В корзину</button>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <section class="product" id="drinks">
+        <div class="container">
+            <h2>Напитки</h2>
+            <div class="content">
+                <div class="card">
+                    <img src="./img/drinks/cola_2.jpg" alt="2 Coca-Cola по суперцене">
+                    <p class="card__name">2 Coca-Cola по суперцене</p>
+                    <p class="card__descr">Две классические Coca-Cola по 0,5 литров по выгодной цене, 0,5 л</p>
+                    <div class="card__bottom">
+                        <p class="card__price">149 ₽</p>
+                        <button class="button">В корзину</button>
+                    </div>
+                </div>
+                <div class="card">
+                    <img src="./img/drinks/cola_orange.jpg" alt="Coca-Cola Orange">
+                    <p class="card__name">Coca-Cola Orange</p>
+                    <p class="card__descr">0,5 л</p>
+                    <div class="card__bottom">
+                        <p class="card__price">99 ₽</p>
+                        <button class="button">В корзину</button>
+                    </div>
+                </div>
+                <div class="card">
+                    <img src="./img/drinks/cola_zero.jpg" alt="Coca-Cola Zero">
+                    <p class="card__name">Coca-Cola Zero</p>
+                    <p class="card__descr">0,5 л</p>
+                    <div class="card__bottom">
+                        <p class="card__price">99 ₽</p>
+                        <button class="button">В корзину</button>
+                    </div>
+                </div>
+                <div class="card">
+                    <img src="./img/drinks/cola.jpg" alt="Coca-Cola">
+                    <p class="card__name">Coca-Cola</p>
+                    <p class="card__descr">0,5 л</p>
+                    <div class="card__bottom">
+                        <p class="card__price">99 ₽</p>
+                        <button class="button">В корзину</button>
+                    </div>
+                </div>
+                <div class="card">
+                    <img src="./img/drinks/cola_vanilla.jpg" alt="Coca-Cola Vanilla">
+                    <p class="card__name">Coca-Cola Vanilla</p>
+                    <p class="card__descr">0,5 л</p>
+                    <div class="card__bottom">
+                        <p class="card__price">99 ₽</p>
+                        <button class="button">В корзину</button>
                     </div>
                 </div>
             </div>
