--- a/index.html
+++ b/index.html
@@ -41,6 +41,11 @@
         <img src="./img/slider/3.jpg" alt="Пицца 'Сырный бум' из трех сыров: моцарелла, чеддер, пармезан">
         <img src="./img/slider/1.jpg" alt="Пицца и закуски без мяса" class="active">
         <img src="./img/slider/2.jpg" alt="Додо и Союзмультфильм. Розыгрыш призов">
+        <div class="slider__dotts">
+            <button class="dot"></button>
+            <button class="dot"></button>
+            <button class="dot"></button>
+        </div>
     </section>
     <section class="new">
         <div class="container">
