--- a/index.html
+++ b/index.html
@@ -10,13 +10,19 @@
     <link rel="stylesheet" href="./style/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@400;600;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@400;600;700;800;900&display=swap" rel="stylesheet">
 </head>
 <body>
     <header class="header">
         <div class="container">
             <div class="header__top">
-                <img class="header__logo" src="./icons/logo.png" alt="logo">
+                <div class="header__logo logo">
+                    <img src="./icons/logo.svg" alt="логотип">
+                    <div class="logo__text">
+                        <h1>ДОДО ПИЦЦА</h1>
+                        <p>Сеть пиццерий  №1 в России</p>
+                    </div>
+                </div>
                 <div class="header__phone">
                     <a href="tel:+88003020060">8 800 302-00-60</a>
                     <p>Звонок бесплатный</p>
