--- a/index.html
+++ b/index.html
@@ -375,6 +375,28 @@
             </div>
         </div>
     </section>
+    <footer class="footer">
+        <div class="container">
+            <div class="footer__top"></div>
+            <div class="footer__bottom">
+                <div class="wrapper">
+                    <div class="footer__info">
+                        <a href="#" class="footer__logo">
+                            Додо Пицца
+                        </a>
+                        <span class="footer__copyright">© 2023</span>
+                    </div>
+                    <div class="footer__other">
+                        <ul>
+                            <li><a href="">Правовая информация</a></li>
+                            <li><a href="">Калорийность и состав</a></li>
+                            <li><a href="">Помощь</a></li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </footer>
     <script src="./js/script.js"></script>
 </body>
 </html>
