--- a/index.html
+++ b/index.html
@@ -377,7 +377,9 @@
     </section>
     <footer class="footer">
         <div class="container">
-            <div class="footer__top"></div>
+            <div class="footer__top">
+                <hr>
+            </div>
             <div class="footer__bottom">
                 <div class="wrapper">
                     <div class="footer__info">
@@ -388,10 +390,17 @@
                     </div>
                     <div class="footer__other">
                         <ul>
-                            <li><a href="">Правовая информация</a></li>
-                            <li><a href="">Калорийность и состав</a></li>
-                            <li><a href="">Помощь</a></li>
+                            <li><a href="#">Правовая информация</a></li>
+                            <li><a href="#">Калорийность и состав</a></li>
+                            <li><a href="#">Помощь</a></li>
                         </ul>
+                    </div>
+                    <div class="footer__social">
+                        <a href="#"><img src="./icons/social/facebook.svg" alt=""></a>
+                        <a href="#"><img src="./icons/social/instagram.svg" alt=""></a>
+                        <a href="#"><img src="./icons/social/odnoklassniki.svg" alt=""></a>
+                        <a href="#"><img src="./icons/social/vk.svg" alt=""></a>
+                        <a href="#"><img src="./icons/social/youtube.svg" alt=""></a>
                     </div>
                 </div>
             </div>
