--- a/index.html
+++ b/index.html
@@ -378,8 +378,53 @@
     <footer class="footer">
         <div class="container">
             <div class="footer__top">
-                <hr>
+                <div class="footer__lists">
+                    <div class="footer__list list">
+                        <p>Додо Пицца</p>
+                        <ul>
+                            <li><a href="">О нас</a></li>
+                            <li><a href="">Додо-книга</a></li>
+                            <li><a href="">Блог «Сила ума»</a></li>
+                            <li><a href="">Додо ИС</a></li>
+                        </ul>
+                    </div>
+                    <div class="footer__list list">
+                        <p>Работа</p>
+                        <ul>
+                            <li><a href="">В пиццерии</a></li>
+                            <li><a href="">В контакт- центре</a></li>
+                        </ul>
+                    </div>
+                    <div class="footer__list list">
+                        <p>Партнерам</p>
+                        <ul>
+                            <li><a href="">Франшиза</a></li>
+                            <li><a href="">Инвестиции</a></li>
+                            <li><a href="">Поставщикам</a></li>
+                            <li><a href="">Предложить помещение</a></li>
+                        </ul>
+                    </div>
+                    <div class="footer__list list">
+                        <p>Это интересно</p>
+                        <ul>
+                            <li><a href="">Экскурсии и мастер-классы</a></li>
+                            <li><a href="">Корпоративные заказы</a></li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="footer__contacts">
+                    <a href="#"><img src="icons/google_pay.png" alt=""></a>
+                    <a href="#"><img src="icons/apple_store.png" alt=""></a>
+                    <div class="footer__phone">
+                        <a href="tel:+88003020060">8-800-302-00-60</a>
+                        <p>Звонок бесплатный</p>
+                    </div>
+                    <div class="footer__mail">
+                        <a href="mailto:feedback@dodopizza.com">feedback@dodopizza.com</a>
+                    </div>
+                </div>
             </div>
+            <hr>
             <div class="footer__bottom">
                 <div class="wrapper">
                     <div class="footer__info">
