footer__middle desctop is done

--- a/index.html
+++ b/index.html
@@ -31,17 +31,20 @@
         </div>
     </header>
     <section class="menu">
-        <nav class="menu__nav">
-            <ul>
-                <li><a href="#pizza">Пицца</a></li>
-                <li><a href="#combo">Комбо</a></li>
-                <li><a href="#snacks">Закуски</a></li>
-                <li><a href="#deserts">Десерты</a></li>
-                <li><a href="#drinks">Напити</a></li>
-                <li><a href="#other">Другие товары</a></li>
-            </ul>
-        </nav>
-        <a href="#" class="button button--orange menu__basket">Корзина</a>
+        <div class="content">
+            <nav class="menu__nav">
+                <ul>
+                    <li><a href="#pizza">Пицца</a></li>
+                    <li><a href="#combo">Комбо</a></li>
+                    <li><a href="#snacks">Закуски</a></li>
+                    <li><a href="#deserts">Десерты</a></li>
+                    <li><a href="#drinks">Напити</a></li>
+                    <li><a href="#other">Другие товары</a></li>
+                </ul>
+            </nav>
+            <a href="#" class="button button--orange menu__basket">Корзина</a>
+        </div>
+
     </section>
     <section class="slider">
         <img src="./img/slider/3.jpg" alt="Пицца 'Сырный бум' из трех сыров: моцарелла, чеддер, пармезан">
@@ -422,6 +425,24 @@
                     <div class="footer__mail">
                         <a href="mailto:feedback@dodopizza.com">feedback@dodopizza.com</a>
                     </div>
+                </div>
+            </div>
+            <div class="footer__middle">
+                <div class="footer__profit statistic">
+                    <p class="statistic__title">
+                        1 396 362 874 ₽
+                    </p>
+                    <p class="statistic__descr">
+                        Выручка российской сети в этом месяце. В прошлом — 2 460 305 416 ₽
+                    </p>
+                </div>
+                <div class="footer__quantity statistic">
+                    <p class="statistic__title">
+                        688 пиццерий
+                    </p>
+                    <p class="statistic__descr">
+                        в 14 странах, включая Китай,<br>США и Великобританию
+                    </p>
                 </div>
             </div>
             <hr>
