--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
             <div class="content">
                 <nav class="menu__nav">
                     <ul>
-                        <li><a href="#pizza">Пицца</a></li>
+                        <li class="active"><a href="#pizza">Пицца</a></li>
                         <li><a href="#combo">Комбо</a></li>
                         <li><a href="#snacks">Закуски</a></li>
                         <li><a href="#deserts">Десерты</a></li>
