--- a/index.html
+++ b/index.html
@@ -95,80 +95,96 @@
             </div>
         </section>
     </div>
-    <section class="product d-none" id="pizza">
+    <section class="product" id="pizza">
         <div class="container">
             <h2>Пицца</h2>
             <div class="content">
                 <div class="card">
                     <img src="./img/pizza/pizza_half.jpg" alt="Пицца из половинок">
-                    <p class="card__name">Пицца из половинок</p>
-                    <p class="card__descr">Соберите свою пиццу 35 см с двумя разными вкусами</p>
-                    <div class="card__bottom">
-                        <p class="card__price">от 600 ₽</p>
-                        <button class="button button--orange">Собрать</button>
+                    <div class="card__text">
+                        <p class="card__name">Пицца из половинок</p>
+                        <p class="card__descr">Соберите свою пиццу 35 см с двумя разными вкусами</p>
+                        <div class="card__bottom">
+                            <p class="card__price">от 600 ₽</p>
+                            <button class="button button--orange">Собрать</button>
+                        </div>
                     </div>
                 </div>
                 <div class="card">
                     <img src="./img/pizza/pepperoni_heart.jpg" alt="Пепперони-сердце">
-                    <p class="card__name">Пепперони-сердце</p>
-                    <p class="card__descr">Пикантная пепперони, моцарелла, томатный соус</p>
-                    <div class="card__bottom">
-                        <p class="card__price">от 625 ₽</p>
-                        <button class="button">Выбрать</button>
+                    <div class="card__text">
+                        <p class="card__name">Пепперони-сердце</p>
+                        <p class="card__descr">Пикантная пепперони, моцарелла, томатный соус</p>
+                        <div class="card__bottom">
+                            <p class="card__price">от 625 ₽</p>
+                            <button class="button">Выбрать</button>
+                        </div>
                     </div>
                 </div>
                 <div class="card">
                     <img src="./img/pizza/pie_heart.jpg" alt="Пирог-сердце">
-                    <p class="card__name">Пирог-сердце</p>
-                    <p class="card__descr">Ананасы, брусника, сгущенное молоко</p>
-                    <div class="card__bottom">
-                        <p class="card__price">от 625 ₽</p>
-                        <button class="button">Выбрать</button>
+                    <div class="card__text">
+                        <p class="card__name">Пирог-сердце</p>
+                        <p class="card__descr">Ананасы, брусника, сгущенное молоко</p>
+                        <div class="card__bottom">
+                            <p class="card__price">от 625 ₽</p>
+                            <button class="button">Выбрать</button>
+                        </div>
                     </div>
                 </div>
                 <div class="card">
                     <img src="./img/pizza/cheesy_cheder.jpg" alt="Чиззи чеддер">
-                    <p class="card__name">Чиззи чеддер</p>
-                    <p class="card__descr">Ветчина, сыр чеддер, сладкий перец, моцарелла, томатный соус, чеснок, итальянские травы</p>
-                    <div class="card__bottom">
-                        <p class="card__price">от 625 ₽</p>
-                        <button class="button">Выбрать</button>
+                    <div class="card__text">
+                        <p class="card__name">Чиззи чеддер</p>
+                        <p class="card__descr">Ветчина, сыр чеддер, сладкий перец, моцарелла, томатный соус, чеснок, итальянские травы</p>
+                        <div class="card__bottom">
+                            <p class="card__price">от 625 ₽</p>
+                            <button class="button">Выбрать</button>
+                        </div>
                     </div>
                 </div>
                 <div class="card">
                     <img src="./img/pizza/chikeen_blu_cheese.jpg" alt="Цыпленок блю чиз">
-                    <p class="card__name">Цыпленок блю чиз</p>
-                    <p class="card__descr">Цыпленок, сыр блю чиз, томаты, моцарелла, соус альфредо</p>
-                    <div class="card__bottom">
-                        <p class="card__price">от 445 ₽</p>
-                        <button class="button">Выбрать</button>
+                    <div class="card__text">
+                        <p class="card__name">Цыпленок блю чиз</p>
+                        <p class="card__descr">Цыпленок, сыр блю чиз, томаты, моцарелла, соус альфредо</p>
+                        <div class="card__bottom">
+                            <p class="card__price">от 445 ₽</p>
+                            <button class="button">Выбрать</button>
+                        </div>
                     </div>
                 </div>
                 <div class="card">
                     <img src="./img/pizza/salmon.jpg" alt="Нежный лосось">
-                    <p class="card__name">Нежный лосось</p>
-                    <p class="card__descr">Лосось, томаты черри, соус песто, моцарелла, соус альфредо</p>
-                    <div class="card__bottom">
-                        <p class="card__price">от 495 ₽</p>
-                        <button class="button">Выбрать</button>
+                    <div class="card__text">
+                        <p class="card__name">Нежный лосось</p>
+                        <p class="card__descr">Лосось, томаты черри, соус песто, моцарелла, соус альфредо</p>
+                        <div class="card__bottom">
+                            <p class="card__price">от 495 ₽</p>
+                            <button class="button">Выбрать</button>
+                        </div>
                     </div>
                 </div>
                 <div class="card">
                     <img src="./img/pizza/cheese.jpg" alt="Сырная">
-                    <p class="card__name">Сырная</p>
-                    <p class="card__descr">Увеличенная порция моцареллы, сыры чеддер и пармезан, соус альфредо</p>
-                    <div class="card__bottom">
-                        <p class="card__price">от 245 ₽</p>
-                        <button class="button">Выбрать</button>
+                    <div class="card__text">
+                        <p class="card__name">Сырная</p>
+                        <p class="card__descr">Увеличенная порция моцареллы, сыры чеддер и пармезан, соус альфредо</p>
+                        <div class="card__bottom">
+                            <p class="card__price">от 245 ₽</p>
+                            <button class="button">Выбрать</button>
+                        </div>
                     </div>
                 </div>
                 <div class="card">
                     <img src="./img/pizza/pepperoni_fresh.jpg" alt="Пепперони фреш">
-                    <p class="card__name">Пепперони фреш</p>
-                    <p class="card__descr">Пикантная пепперони, увеличенная порция моцареллы, томаты, томатный соус</p>
-                    <div class="card__bottom">
-                        <p class="card__price">от 245 ₽</p>
-                        <button class="button">Выбрать</button>
+                    <div class="card__text">
+                        <p class="card__name">Пепперони фреш</p>
+                        <p class="card__descr">Пикантная пепперони, увеличенная порция моцареллы, томаты, томатный соус</p>
+                        <div class="card__bottom">
+                            <p class="card__price">от 245 ₽</p>
+                            <button class="button">Выбрать</button>
+                        </div>
                     </div>
                 </div>
             </div>
